qa start small fix overflowing menu on mobile

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -78,10 +78,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-regular";
-  src: url("../fonts/halcyon_regular_macroman/halcyon-regular-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_regular_macroman/halcyon-regular-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_regular_macroman/halcyon-regular-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_regular_macroman/halcyon-regular-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -89,10 +87,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-semibolditalic";
-  src: url("../fonts/halcyon_semibolditalic_macroman/halcyon-semibolditalic-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_semibolditalic_macroman/halcyon-semibolditalic-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_semibolditalic_macroman/halcyon-semibolditalic-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_semibolditalic_macroman/halcyon-semibolditalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -100,10 +96,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-thinitalic";
-  src: url("../fonts/halcyon_thinitalic_macroman/halcyon-thinitalic-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_thinitalic_macroman/halcyon-thinitalic-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_thinitalic_macroman/halcyon-thinitalic-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_thinitalic_macroman/halcyon-thinitalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -111,10 +105,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-thin";
-  src: url("../fonts/halcyon_thin_macroman/halcyon-thin-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_thin_macroman/halcyon-thin-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_thin_macroman/halcyon-thin-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_thin_macroman/halcyon-thin-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -122,10 +114,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-semibold";
-  src: url("../fonts/halcyon_semibold_macroman/halcyon-semibold-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_semibold_macroman/halcyon-semibold-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_semibold_macroman/halcyon-semibold-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_semibold_macroman/halcyon-semibold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -133,10 +123,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-medium";
-  src: url("../fonts/halcyon_medium_macroman/halcyon-medium-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_medium_macroman/halcyon-medium-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_medium_macroman/halcyon-medium-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_medium_macroman/halcyon-medium-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -144,10 +132,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-light";
-  src: url("../fonts/halcyon_light_macroman/halcyon-light-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_light_macroman/halcyon-light-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_light_macroman/halcyon-light-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_light_macroman/halcyon-light-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -155,10 +141,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-regularitalic";
-  src: url("../fonts/halcyon_italic_macroman/halcyon-regularitalic-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_italic_macroman/halcyon-regularitalic-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_italic_macroman/halcyon-regularitalic-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_italic_macroman/halcyon-regularitalic-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -166,10 +150,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-bold";
-  src: url("../fonts/halcyon_bold_macroman/halcyon-bold-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_bold_macroman/halcyon-bold-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_bold_macroman/halcyon-bold-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_bold_macroman/halcyon-bold-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -177,10 +159,8 @@ ul {
 
 @font-face {
   font-family: "halcyon-black";
-  src: url("../fonts/halcyon_black_macroman/halcyon-black-webfont.woff2")
-      format("woff2"),
-    url("../fonts/halcyon_black_macroman/halcyon-black-webfont.woff")
-      format("woff");
+  src: url("../fonts/halcyon_black_macroman/halcyon-black-webfont.woff2") format("woff2"),
+    url("../fonts/halcyon_black_macroman/halcyon-black-webfont.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -289,11 +269,13 @@ hr {
   background: $teaGreen;
   margin-bottom: 65px;
 }
+
 .wp-block-separator {
   position: relative;
   background: transparent;
   overflow: initial;
   margin-bottom: 100px;
+
   &::after {
     content: url("../public/singlestalk-square.svg");
     height: 60px;
@@ -970,7 +952,6 @@ li.nav-link {
 
 .btn--secondary {
   border-radius: 5px;
-  padding: 3px 30px;
   margin: 5px;
   font-family: $medium;
   color: $soil;
@@ -978,7 +959,20 @@ li.nav-link {
   background: transparent;
   border: 0px;
   text-align: left;
+  padding: 3px 15px;
+
+  @include media-query-min($sm) {
+    font-size: calc(16px + 8 * ((100vw - 320px) / 680));
+    line-height: 2.4rem;
+  }
+
+  @include media-query-min($md) {
+    @include font-size(2.4);
+    line-height: 30px;
+    padding: 3px 30px;
+  }
 }
+
 
 /***  Images  ***/
 
@@ -1005,23 +999,27 @@ img {
   width: 100%;
   margin: 45px auto;
   background-color: #f0e7db;
+
   .signupWrapper {
     width: 100%;
     margin: 0 auto;
     display: flex;
     flex-direction: row;
     align-items: center;
+
     &.wrapper--support {
       width: 100%;
     }
   }
 }
+
 .sign-up {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
   padding: 30px 0px 20px 20px;
+
   @include media-query-min($sm) {
     padding: 30px;
   }
@@ -1035,14 +1033,17 @@ img {
   input {
     height: 38px;
     max-width: 280px;
+
     @include media-query-min($xs) {
       width: 200px;
       margin-right: 20px;
     }
   }
+
   &.text--support {
     padding: 45px;
   }
+
   button {
     background-color: $soil;
     border-radius: 10px;
@@ -1070,12 +1071,15 @@ img {
     text-align: center;
   }
 }
+
 .triple-stalk {
   height: 100%;
   min-width: 40%;
+
   @include media-query-min($sm) {
     min-width: 30%;
   }
+
   @include media-query-min($md) {
     position: relative;
     left: -40px;
